--- a/src/style.css
+++ b/src/style.css
@@ -49,6 +49,7 @@ footer a {
   line-height: 160%;
   color: #2c3e50;
   background-color: #ffffcc;
+  user-select: none;
 }
 
 .canvas {
@@ -60,3 +61,25 @@ footer a {
   background-color: #fefefe;
 
 }
+
+.buttons {
+  position: absolute;
+  display: block;
+  left: 1rem;
+  top: 4.6rem;
+  font-size: 80%;
+}
+
+.btn {
+  display: inline-block;
+  min-width: 4rem;
+  padding: 0.2rem;
+  background-color: #ccc;
+  border: 1px solid #aaa;
+  border-radius: 0.2rem;
+}
+.btn.active {
+  background-color: #fcc;
+  border: 2px solid #faa;
+}
+
